[gd_scene load_steps=13 format=3 uid="uid://negigewd7e8n"]

[ext_resource type="Script" uid="uid://cv3ewfto8woe" path="res://scenes/detectEnemies.gd" id="1_aor04"]
[ext_resource type="Script" uid="uid://ckdt573aatt4q" path="res://scenes/drwal_bullet_spawner.gd" id="2_4m5f3"]
[ext_resource type="Script" path="res://scenes/shopbutton.gd" id="2_bs1bs"]
[ext_resource type="Texture2D" uid="uid://b4ft76y4u2lch" path="res://sprites/drwal.png" id="3_qu14i"]
[ext_resource type="Texture2D" uid="uid://d144oxog2br8a" path="res://sprites/drwalLoaded.png" id="4_3bkuk"]
[ext_resource type="Texture2D" uid="uid://7roo8rwmox44" path="res://sprites/siekiera.png" id="4_pesdr"]
[ext_resource type="Script" uid="uid://bqjvy45q4m0eh" path="res://scenes/chomik.gd" id="5_bs1bs"]
[ext_resource type="Texture2D" uid="uid://uwi2cq00dvf4" path="res://sprites/plus.png" id="6_sv16w"]
[ext_resource type="Script" uid="uid://c5aho3us2h88x" path="res://scenes.gd" id="7_6lou1"]
[ext_resource type="Script" uid="uid://ulum26qfvo30" path="res://scenes/button.gd" id="9_08amw"]
[ext_resource type="Texture2D" uid="uid://knvc3pqsr8te" path="res://sprites/speed.png" id="10_sv16w"]
[ext_resource type="Texture2D" uid="uid://lvju5ijq2vka" path="res://sprites/krzak.png" id="8_suvg1"]
[ext_resource type="Script" uid="uid://bvyd0g46ec848" path="res://scenes/drwal_shop.gd" id="11_sv16w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mr8ar"]
radius = 150.0

[node name="Drwal" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_aor04")

[node name="Shopbutton" type="Button" parent="."]
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("2_bs1bs")

[node name="DrwalBulletSpawner" type="Node2D" parent="."]
z_index = 1
position = Vector2(27, 30.25)
script = ExtResource("2_4m5f3")
shoot_texture = ExtResource("3_qu14i")
default_texture = ExtResource("4_3bkuk")
metadata/damageasd = 30

[node name="ColorRect" type="ColorRect" parent="DrwalBulletSpawner"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="BulletTimer" type="Timer" parent="DrwalBulletSpawner"]
wait_time = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_qu14i")
centered = false

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 32)
shape = SubResource("CircleShape2D_mr8ar")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = -98.75
offset_top = 85.0
offset_right = 158.25
offset_bottom = 182.0
color = Color(0, 0, 0, 0.8)

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -45.5
offset_right = 66.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Damage" type="TextureButton" parent="ColorRect/GridContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
texture_normal = ExtResource("4_pesdr")
script = ExtResource("5_bs1bs")

[node name="Range" type="TextureButton" parent="ColorRect/GridContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
texture_normal = ExtResource("6_sv16w")
script = ExtResource("7_6lou1")

[node name="Speed" type="TextureButton" parent="ColorRect/GridContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
texture_normal = ExtResource("10_sv16w")
script = ExtResource("7_6lou1")

[node name="DamagePrice" type="RichTextLabel" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "100"
fit_content = true
horizontal_alignment = 1

[node name="RangePrice" type="RichTextLabel" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "100"
fit_content = true
horizontal_alignment = 1

[node name="SpeedPrice" type="RichTextLabel" parent="ColorRect/GridContainer"]
layout_mode = 2
text = "100"
fit_content = true
horizontal_alignment = 1

[node name="DrwalShop" type="Button" parent="ColorRect"]
z_index = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_bottom = 25.0
grow_horizontal = 0
text = "X"
script = ExtResource("11_sv16w")

[connection signal="pressed" from="Shopbutton" to="Shopbutton" method="_on_pressed"]
[connection signal="timeout" from="DrwalBulletSpawner/BulletTimer" to="DrwalBulletSpawner" method="_on_bullet_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="ColorRect/GridContainer/Damage" to="ColorRect/GridContainer/Damage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/GridContainer/Damage" to="ColorRect/GridContainer/Damage" method="_on_mouse_exited"]
[connection signal="pressed" from="ColorRect/GridContainer/Damage" to="ColorRect/DrwalShop" method="_on_damage_pressed"]
[connection signal="mouse_entered" from="ColorRect/GridContainer/Range" to="ColorRect/GridContainer/Range" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/GridContainer/Range" to="ColorRect/GridContainer/Range" method="_on_mouse_exited"]
[connection signal="pressed" from="ColorRect/GridContainer/Range" to="ColorRect/DrwalShop" method="_on_range_pressed"]
[connection signal="mouse_entered" from="ColorRect/GridContainer/Speed" to="ColorRect/GridContainer/Speed" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/GridContainer/Speed" to="ColorRect/GridContainer/Speed" method="_on_mouse_exited"]
[connection signal="pressed" from="ColorRect/GridContainer/Speed" to="ColorRect/DrwalShop" method="_on_speed_pressed"]
[connection signal="pressed" from="ColorRect/DrwalShop" to="ColorRect/DrwalShop" method="_on_pressed"]
